# tg-tools

./: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt
apps/public/: README.md
apps/selfhosted/app/: __init__.py  __main__.py  config.py  db.py  main.py  schemas.py  service.py  session_store.py
apps/selfhosted/frontend/: index.html
core/: pyproject.toml
core/tg_tools_core/: __init__.py  build.py  client.py  contact.py  crypto.py  exceptions.py  models.py  remove.py  scan.py
scripts/: login_probe.py
