[project]
name = "tg-tools-core"
version = "0.1.0"
description = "Shared Telegram core (client, login, scan, models) for tg-tools apps."
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36,<2",
    "pydantic>=2.7",
    "cryptography>=42",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_tools_core*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
